test/errors/function/too_many_args2.np
def fn(x: int) -> int:
    return x


fn(1, 2)
